Fix light/dark mode

--- a/styles/routes/index.css
+++ b/styles/routes/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-white dark:bg-slate-800 text-slate-800 dark:text-slate-200;
+  }
+}
